@@ -1,3 +1,8 @@
+2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* SoftDebuggerAdaptor.cs: Don't crash if something goes wrong
+	  while getting type data.
+
 2010-03-09  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* SoftDebuggerAdaptor.cs: Nicer log messages.
